--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
     let message=document.getElementById("Address").value;
 
     
-   alert(`Hello,${fname} ${lname}.You've submitted the form which concludes that your Email Id is${email} and
-        your Dob is ${DOB}.we've received your message,which is ${message} THANK YOU`);
+   alert(`Hello,${fname} ${lname}.You've submitted the form which concludes that your Email Id is${email} and your Dob is ${DOB}.we've received your message,which is ${message} THANK YOU`);
 
 
 
